--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" media="screen and (min-width:501px) and (max-width:768px)" href="css/tablet.css">
     <link rel="stylesheet" media="screen and (max-width:500px)" href="css/mobile.css">
     <script src="https://kit.fontawesome.com/647354dd51.js" crossorigin="anonymous"></script>
-    <title>BizTech</title>
+    <link rel="icon" href="favicon.png">
+    <title>BizTech | LOGICADE</title>
 </head>
 <body>
     <section id="header">
@@ -22,7 +23,7 @@
                 <div class="list">
                     <ul>
                         <li><a href="#">Home</a> </li>
-                        <li><a href="#services">Services</a> </li>
+                        <li><a href="#">Services</a> </li>
                         <li><a href="#">VoIP</a> </li>
                         <li><a href="#">Support</a> </li>
                         <li><a href="#">Remote</a> </li>
@@ -103,7 +104,7 @@
         </div>
     </section>
     <section id="footer">
-        <h3 class="copyright py-1">© 2014 BizTech International LLC</h3>
+        <h3 class="copyright py-1">© 2014 BizTech International LLC | LOGICADE</h3>
         <div class="list py-1">
             <ul>
                 <li><a href="#services">Services</a> </li>
